--- a/Client/package.json
+++ b/Client/package.json
@@ -13,8 +13,8 @@
   "author": "Simon",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "*",
-    "express": "*"
+    "express": "*",
+    "socket.io": "^2.1.1"
   },
   "bugs": {
     "url": "https://github.com/rafaelschreiber/TCPChat2/issues"
